Remove deprecated commands

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -195,7 +195,7 @@ sidebar_position: 4
 ### Changes
 
 - updated [spo page get](../cmd/spo/page/page-get.mdx) command with `--default` option to retrieve the default page [#6493](https://github.com/pnp/cli-microsoft365/issues/6493)
-- added a deprecation warning for [spo mail send](../cmd/spo/mail/mail-send.mdx) command [#6576](https://github.com/pnp/cli-microsoft365/issues/6576)
+- added a deprecation warning for 'spo mail send' command [#6576](https://github.com/pnp/cli-microsoft365/issues/6576)
 - added new [sample script](../sample-scripts/entra/find-obsolete-m365-groups/index.mdx) to get a list of all obsolete M365 groups [#2475](https://github.com/pnp/cli-microsoft365/issues/2475)
 - fixed prompting for a value when an option is missing [#6518](https://github.com/pnp/cli-microsoft365/issues/6518)
 - updated project & docs dependencies
@@ -3267,9 +3267,9 @@ sidebar_position: 4
 
 **Skype:**
 
-- [skype report activitycounts](../cmd/skype/report/report-activitycounts.mdx) - gets the trends on how many users organized and participated in conference sessions held in your organization through Skype for Business. The report also includes the number of peer-to-peer sessions [#1302](https://github.com/pnp/cli-microsoft365/issues/1302)
-- [skype report activityusercounts](../cmd/skype/report/report-activityusercounts.mdx) - gets the trends on how many unique users organized and participated in conference sessions held in your organization through Skype for Business. The report also includes the number of peer-to-peer sessions [#1303](https://github.com/pnp/cli-microsoft365/issues/1303)
-- [skype report activityuserdetail](../cmd/skype/report/report-activityuserdetail.mdx) - gets details about Skype for Business activity by user [#1301](https://github.com/pnp/cli-microsoft365/issues/1301)
+- 'skype report activitycounts' - gets the trends on how many users organized and participated in conference sessions held in your organization through Skype for Business. The report also includes the number of peer-to-peer sessions [#1302](https://github.com/pnp/cli-microsoft365/issues/1302)
+- 'skype report activityusercounts' - gets the trends on how many unique users organized and participated in conference sessions held in your organization through Skype for Business. The report also includes the number of peer-to-peer sessions [#1303](https://github.com/pnp/cli-microsoft365/issues/1303)
+- 'skype report activityuserdetail' - gets details about Skype for Business activity by user [#1301](https://github.com/pnp/cli-microsoft365/issues/1301)
 
 **Yammer:**
 
@@ -3665,7 +3665,7 @@ sidebar_position: 4
 **SharePoint Online:**
 
 - [spo contenttype field remove](../cmd/spo/contenttype/contenttype-field-remove.mdx) - removes a column from a site- or list content type [#673](https://github.com/pnp/cli-microsoft365/issues/673)
-- [spo mail send](../cmd/spo/mail/mail-send.mdx) - sends an e-mail from SharePoint [#753](https://github.com/pnp/cli-microsoft365/issues/753)
+- 'spo mail send' - sends an e-mail from SharePoint [#753](https://github.com/pnp/cli-microsoft365/issues/753)
 
 **Microsoft Graph:**
 
