Removes deprecated commands. Closes #6577

--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -23,6 +23,10 @@ Read the documentation for alternative commands to find out how to use them and 
 
 Command | Alternative
 --- | ---
+`spo mail send` | [outlook mail send](./cmd/outlook/mail/mail-send.mdx)
+`skype report activitycounts` | None
+`skype report activityusercounts` | None
+`skype report activityuserdetail` | None
 `viva engage group list` | [viva engage community list](./cmd/viva/engage/engage-community-list.mdx)
 `viva engage group user add` | [viva engage community user add](./cmd/viva/engage/engage-community-user-add.mdx)
 `viva engage group user remove` | [viva engage community user remove](./cmd/viva/engage/engage-community-user-remove.mdx)
