Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,20 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.11.0 (beta)
+
+### New commands
+
+**CLI:**
+
+- [cli app add](../cmd/cli/app/app-add.mdx) - creates a new app registration to use for the CLI for Microsoft 365 [#6656](https://github.com/pnp/cli-microsoft365/issues/6656)
+
+### Changes
+
+- updated 'spo serviceprincipal permissionrequest list' command [#6788](https://github.com/pnp/cli-microsoft365/pull/6788)
+- updated 'spo site appcatalog list' command [#6794](https://github.com/pnp/cli-microsoft365/pull/6794)
+- updated 'spo page section' commands [#6743](https://github.com/pnp/cli-microsoft365/pull/6743)
+
 ## [v10.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.10.0)
 
 ### New commands
