Enhancement: Ability to add sub groups using entra group member add

--- a/docs/docs/cmd/entra/group/group-member-add.mdx
+++ b/docs/docs/cmd/entra/group/group-member-add.mdx
@@ -90,7 +90,7 @@ m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --sub
 Adds multiple members (subgroups) specified by name as members to a group specified by ID.
 
 ```sh
-m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --subgroupNames "john.doe@contoso.com,adele.vance@contoso.com" --role Member
+m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --subgroupNames "Developers,Human Resources" --role Member
 ```
 
 ## Response
