Remove viva engage group commands

--- a/docs/docs/cmd/viva/engage/engage-community-user-remove.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-user-remove.mdx
@@ -36,6 +36,25 @@ m365 viva engage community user remove [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                              |
+  |-----------------|------------------------------------------|
+  | Microsoft Graph | GroupMember.ReadWrite.All                |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                              |
+  |-----------------|------------------------------------------|
+  | Microsoft Graph | GroupMember.ReadWrite.All                |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Remove a user specified by ID as a member from a community specified by display name.
