--- a/docs/docs/cmd/viva/engage/engage-community-list.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-list.mdx
@@ -16,6 +16,25 @@ m365 viva engage community list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                              |
+  |-----------------|------------------------------------------|
+  | Microsoft Graph | Community.Read.All                       |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                              |
+  |-----------------|------------------------------------------|
+  | Microsoft Graph | Community.Read.All                       |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Lists all Viva Engage communities
