Adds new contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -552,6 +552,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: ''
   },
   {
+    name: 'Nirav Raval',
+    company: '2toLead',
+    github: 'nirav-raval',
+    x: 'nrvrvl'
+  },
+  {
     name: 'Otto',
     company: '',
     github: 'berot3',
