Remove viva engage group commands

--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -10,7 +10,7 @@ Some commands were removed because they used either undocumented APIs that requi
 
 Read the documentation for alternative commands to find out how to use them and what permissions are required.
 
-command | alternative
+Command | Aternative
 --- | ---
 `viva engage group list` | [viva engage community list](./cmd/viva/engage/engage-community-list.mdx)
 `viva engage group user add` | [viva engage community user add](./cmd/viva/engage/engage-community-user-add.mdx)
