Address code review feedback

--- a/docs/docs/cmd/spo/file/file-version-keep.mdx
+++ b/docs/docs/cmd/spo/file/file-version-keep.mdx
@@ -33,18 +33,18 @@ m365 spo file version keep [options]
 ## Permissions
 
 <Tabs>
-  <TabItem value="Delegated" label="Delegated">
-  
-  | Resource   | Permissions                                      |
-  |------------|--------------------------------------------------|
-  | SharePoint | AllSites.Write, AllSites.Manage, AllSites.FullControl |
+  <TabItem value="Delegated">
+
+  | Resource   | Permissions    |
+  |------------|----------------|
+  | SharePoint | AllSites.Write |
 
   </TabItem>
-  <TabItem value="Application" label="Application">
-  
-  | Resource   | Permissions                                         |
-  |------------|-----------------------------------------------------|
-  | SharePoint | Sites.ReadWrite.All, Sites.Manage.All, Sites.FullControl.All |
+  <TabItem value="Application">
+
+  | Resource   | Permissions         |
+  |------------|---------------------|
+  | SharePoint | Sites.ReadWrite.All |
 
   </TabItem>
 </Tabs>
