--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -17,12 +17,16 @@ The [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) command has been upd
 
 ### Removed commands
 
-Some commands were removed because they used either undocumented APIs that required extra scope to be consented on the app registration or obsolete APIs.
+Some commands were removed because their API endpoint became deprecated or the product began an end-of-life phase.
 
 Read the documentation for alternative commands to find out how to use them and what permissions are required.
 
 Command | Alternative
 --- | ---
+`pp card clone` | None
+`pp card get` | None
+`pp card list` | None
+`pp card remove` | None
 `spo mail send` | [outlook mail send](./cmd/outlook/mail/mail-send.mdx)
 `skype report activitycounts` | None
 `skype report activityusercounts` | None
