--- a/docs/docs/v6-upgrade-guidance.mdx
+++ b/docs/docs/v6-upgrade-guidance.mdx
@@ -205,10 +205,10 @@ We've decided to remove all short notations for option `--asAdmin` in pp command
 
 Affected commands:
 
-- [pp card clone](./cmd/pp/card/card-clone.mdx)
-- [pp card get](./cmd/pp/card/card-get.mdx)
-- [pp card list](./cmd/pp/card/card-list.mdx)
-- [pp card remove](./cmd/pp/card/card-remove.mdx)
+- pp card clone
+- pp card get
+- pp card list
+- pp card remove
 - [pp dataverse table get](./cmd/pp/dataverse/dataverse-table-get.mdx)
 - [pp dataverse table list](./cmd/pp/dataverse/dataverse-table-list.mdx)
 - [pp dataverse table remove](./cmd/pp/dataverse/dataverse-table-remove.mdx)
