--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -443,10 +443,10 @@ Command|Old option|New option
 [pp aibuildermodel get](./cmd/pp/aibuildermodel/aibuildermodel-get.mdx)|`environment`|`environmentName`
 [pp aibuildermodel list](./cmd/pp/aibuildermodel/aibuildermodel-list.mdx)|`environment`|`environmentName`
 [pp aibuildermodel remove](./cmd/pp/aibuildermodel/aibuildermodel-remove.mdx)|`environment`|`environmentName`
-[pp card clone](./cmd/pp/card/card-clone.mdx)|`environment`|`environmentName`
-[pp card get](./cmd/pp/card/card-get.mdx)|`environment`|`environmentName`
-[pp card list](./cmd/pp/card/card-list.mdx)|`environment`|`environmentName`
-[pp card remove](./cmd/pp/card/card-remove.mdx)|`environment`|`environmentName`
+pp card clone|`environment`|`environmentName`
+pp card get|`environment`|`environmentName`
+pp card list|`environment`|`environmentName`
+pp card remove|`environment`|`environmentName`
 [pp chatbot get](./cmd/pp/copilot/copilot-get.mdx)|`environment`|`environmentName`
 [pp chatbot list](./cmd/pp/copilot/copilot-list.mdx)|`environment`|`environmentName`
 [pp chatbot remove](./cmd/pp/copilot/copilot-remove.mdx)|`environment`|`environmentName`
